# alpha-matting

./: CMakeLists.txt  README.md
shaders/: BilateralFilter.frag  ChromaKey.frag  ChromaKey.vert  GuidedImageFilter_Eq5.frag  GuidedImageFilter_Eq6.frag  GuidedImageFilter_Eq8.frag  JointBilateralFilter.frag  MeanFilter.frag  SimpleTexture.frag  SimpleTexture.vert
src/AlphaMatting/: AlphaMattingAppMain.cpp  AlphaMattingMainWindow.cpp  AlphaMattingMainWindow.h  AlphaMattingMainWindow.ui  AlphaMattingWidget.cpp  AlphaMattingWidget.h  AlphaMattingWidget.ui  CMakeLists.txt  GLBilateralFilter.cpp  GLBilateralFilter.h  GLGuidedImageFilter.cpp  GLGuidedImageFilter.h  GLImageProcessor.cpp  GLImageProcessor.h  GLImageWidget.cpp  GLImageWidget.h  GlobalMatting.cpp  GlobalMatting.h
src/ChromaKey/: AppMain.cpp  CMakeLists.txt  GLImageWidget.cpp  GLImageWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/GlobalMatting/: AppMain.cpp  CMakeLists.txt  GlobalMatting.cpp  GlobalMatting.h  GlobalMattingWidget.cpp  GlobalMattingWidget.h  GlobalMattingWidget.ui  QPixmapLabel.cpp  QPixmapLabel.h
src/ImageComposite/: CMakeLists.txt  ImageCompositeAppMain.cpp
src/ImageDiff/: CMakeLists.txt  ImageDiffAppMain.cpp
